--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,4 +1,11 @@
-<form>
+<div>Contact Us</div>
+<form method="POST" action="/confirmation">
 	<label for="username">Name</label>
-	<input type="text" name="username"/>
+	<input type="text" name="username" placeholder="John"/>
+	<label for="email">E-Mail</label>
+	<input type="text" name="email" placeholder="JohnDoe@gmail.com"/>
+	<br/>
+	<textarea type="text" name="message"></textarea>
+	<br/>
+	<input type="submit"/>
 </form>
