--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,1 +1,56 @@
-<%=yield%>
+
+<!Doctype html>
+<html>
+<head>
+	<title><%= '#{title}' %></title>
+   <link rel="stylesheet" href="./public/css/style.css">
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+</head>
+<body>
+
+<div id="wrap">
+
+   <header>
+      	<div id="header_container">
+			<div id="logo">
+				 <a href="./index.html"><img src="./public/images/logo.png" border="0"></a>
+			</div>
+
+			<div id="phone">
+					 <img src="./public/images/top-right-grapes.png" border="0">
+			</div>
+		</div>
+
+
+   </header>   
+
+      	
+
+   <div id="content">
+   <div id="nav">
+	      <ul id="nav">
+	         <li><a href="/">Home</a></li>
+	         <li><a href="/about">About</a></li>
+	         <li><a href="/gallery">Gallery</a></li>
+	         <li><a href="/contact">Contact</a></li>
+	      </ul>
+    	</div>
+      
+      <div id="main_no_sidebar">
+		<h2><%= '#{title}' %></h2>
+		<%=yield%>
+      
+      </div>
+
+
+   </div>
+   <br clear="all"/>
+   <footer>
+      <p>Shady Grove Vineyards &copy; 2014 All Rights Reserved</p>
+   </footer>
+
+</div>
+
+</body>
+</html>
