--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,11 @@
 <head>
 	<title><%= @title %></title>
    <link rel="stylesheet" href="./css/style.css">
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+   <!-- BOOTSTRAP carousel styles -->
+    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/carousel.css">
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
 </head>
 <body>
@@ -52,5 +56,17 @@
 
 </div>
 
+<!-- Carousel JS -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
+<script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-carousel.js"></script>
+	<script>
+      !function ($) {
+        $(function(){
+          // carousel demo
+          $('#myCarousel').carousel()
+        })
+      }(window.jQuery)
+    </script>
 </body>
 </html>
