--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -3,8 +3,10 @@
 
 /* Carousel base class */
 .carousel {
-margin-bottom: 60px;
-height: 80%;
+margin: 0 auto;
+margin-top: 100px; 
+width: 70%;
+max-width: 800px;
 }
 
 .carousel .container {
