--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,33 +1,48 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        ...
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="./images/slide1.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Shady Grove Wine Tastings!</h1>
+              <p class="lead"></p>
+              <a class="btn btn-large btn-default" href="contact">Sign up today</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="./images/slide2.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Shady Grove Wine Tastings!</h1>
+              <p class="lead"></p>
+              <a class="btn btn-large btn-default" href="contact">Sign up today</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="./images/slide3.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Shady Grove Wine Tastings!</h1>
+              <p class="lead"></p>
+              <a class="btn btn-large btn-default" href="contact">Sign up today</a>
+            </div>
+          </div>
+        </div>
+         <div class="item">
+          <img src="./images/slide4.png" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Shady Grove Wine Tastings!</h1>
+              <p class="lead"></p>
+              <a class="btn btn-large btn-default" href="contact">Sign up today</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="item">
-      <img src="..." alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
-    </div>
-    ...
-  </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div><!-- /.carousel -->
