--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,8 @@
 <head>
 	<title><%= @title %></title>
    <link rel="stylesheet" href="./css/style.css">
+   <!-- google font -->
+   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Petit+Formal+Script" />
    <!-- BOOTSTRAP carousel styles -->
     <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
     <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
