--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,17 +1,16 @@
-<form method="POST" action="/confirmation">
+<form method="POST" action="/confirmation" id="contact_form">
 
-	<label for="username">Name</label>
-	<input type="text" name="username" placeholder="John"/>
+	<label for="username" class="contact_label contact">Name</label>
+	<input type="text" name="username" placeholder="John" class="contact"/>
 
-	<label for="email">E-Mail</label>
-	<input type="text" name="email" placeholder="JohnDoe@gmail.com"/>
-
-	<br/>
-
-	<textarea type="text" name="message"></textarea>
+	<label for="email" class="contact_label contact">E-Mail</label>
+	<input type="text" name="email" placeholder="JohnDoe@gmail.com" class="contact"/>
 
 	<br/>
 
-	<input type="submit"/>
+	<textarea type="text" name="message" id="contact_text"></textarea>
+	<br/>
+
+	<input type="submit" id="sub_btn"/>
 
 </form>
