--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,10 +6,9 @@
    <link rel="stylesheet" href="./css/style.css">
    <!-- google font -->
    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Petit+Formal+Script" />
-   <!-- BOOTSTRAP carousel styles -->
+   <!-- BOOTSTRAP styles -->
     <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
     <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/carousel.css">
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
 </head>
@@ -57,17 +56,6 @@
 
 </div>
 
-<!-- Carousel JS -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
-<script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-carousel.js"></script>
-	<script>
-      !function ($) {
-        $(function(){
-          // carousel demo
-          $('#myCarousel').carousel()
-        })
-      }(window.jQuery)
-    </script>
+
 </body>
 </html>
