--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,10 +109,26 @@
 
 
 /*contact page styling*/
+#contact_wrap{
+	width: 100%;
+	margin: 0;
+	text-align: center;
+	margin-top: 50px;
+}
+
+#contact_filler{
+	background: black;
+	display: inline-block;
+	width: 40%;
+	height: 200px;
+}
 
 #contact_form{
-	margin-top: 20px;
+	background: black;
+	display: inline-block;
 	margin-left: 20px;
+	vertical-align: top;
+	text-align: left;
 }
 
 .contact_label{
@@ -125,11 +141,12 @@
 }
 
 #contact_text{
-	width: 50%;
-	padding: 5px;
+	width: 95%;
+	padding: 2.5%;
+	height: 200px;
 }
 
 #sub_btn{
-	position: relative;
-	right: 5px;
+	border-radius: 5px;
+	float: right;
 }
