--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -2,16 +2,21 @@
 -------------------------------------------------- */
 
 /* Carousel base class */
-.carousel {
+.carousel { 
 margin: 0 auto;
-margin-top: 100px; 
+margin-top: 100px;
 width: 70%;
-max-width: 800px;
+height: 100%;
 }
 
 .carousel .container {
 position: relative;
 z-index: 9;
+}
+
+.carousel-inner{
+	height: 7=90%;
+	padding: 20px;
 }
 
 .carousel-control {
@@ -25,7 +30,6 @@ z-index: 10;
 }
 
 .carousel .item {
-height: 500px;
 }
 
 .carousel img {
@@ -33,7 +37,6 @@ position: absolute;
 top: 0;
 left: 0;
 min-width: 100%;
-height: 500px;
 }
 
 .carousel-caption {
