--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,12 +1,8 @@
-  <!DOCTYPE html>
-  <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="css/carousel.css">
-  </head>
-  <body>
+
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
+
       <div class="carousel-inner">
         <div class="item active">
           <img src="./images/slide1.jpg" alt="">
@@ -51,12 +47,13 @@
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+   
     </div><!-- /.carousel -->
 
 <!-- Carousel JS -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
-<script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-carousel.js"></script>
+<script src="../javascript/carousel.js"></script>
   <script>
       !function ($) {
         $(function(){
@@ -65,5 +62,3 @@
         })
       }(window.jQuery)
     </script>
-  </body>
-  </html>
