--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,14 +2,21 @@
 <!Doctype html>
 <html>
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><%= @title %></title>
    <link rel="stylesheet" href="./css/style.css">
    <!-- google font -->
    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Petit+Formal+Script" />
    <!-- BOOTSTRAP styles -->
     <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/carousel.css">
+    <link rel="stylesheet" type="text/css" href="css/gallery.css">
+   	<!-- Scripts -->
+	<script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="./javascript//bootstrap.js"></script>
+
 
 </head>
 <body>
