--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -1,12 +1,12 @@
-ul {         
+.gallery-container ul {         
     padding:0 0 0 0;
     margin:0 0 0 0;
 }
-ul li {     
+.gallery-container ul li {     
     list-style:none;
     margin-bottom:25px;           
 }
-ul li img {
+.gallery-container ul li img {
     cursor: pointer;
 }
 .modal-body {
