--- a/views/gallery2.erb
+++ b/views/gallery2.erb
@@ -4,7 +4,7 @@ try{(function(a){var b="http://",c="demo.fearlessflyer.com",d="/cdn-cgi/cl/",e="
 //]]>
 </script>
     
-    <div class="container">    
+    <div class="gallery-container">    
         <div class="row" style="text-align:center; border-bottom:1px dashed #ccc;  padding:0 0 20px 0; margin-bottom:40px;">
             <h1>
                 <p>Shady Grove Vineyards Gallery</p>
