--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -32,11 +32,17 @@ z-index: 10;
 .carousel .item {
 }
 
+.carousel-inner{
+	overflow: visible;
+}
+
 .carousel img {
 position: absolute;
 top: 0;
 left: 0;
 min-width: 100%;
+height: 500px;
+width: 600px;
 }
 
 .carousel-caption {
@@ -57,3 +63,4 @@ text-shadow: 0 1px 1px rgba(0,0,0,.4);
 .carousel-caption .btn {
 margin-top: 10px;
 }
+
