Worked on Landing Page

--- a/views/landing.erb
+++ b/views/landing.erb
@@ -1,13 +1,14 @@
 <div id="content_wrapper">
 
 <div id="home_left">
-<img src="#" alt="Fake Image">
+<img src="./images/grapes3.png" alt="Fake Image">
 <br />
-<i>Shary Grove Named Winery of the Year in the International Grand Coures De'Ourves in Paris.</i>
+<i>Shary Grove Named<br />Winery of the Year<br />in the International<br />Grand Coures De'Ourves<br />in Paris.</i>
 </div>
 
 <div id="home_right">
 <h3>Welcome to Shady Grove Farms</h3>
+<img src="./images/tastings-collage.png">
 Founded in 1920, Shady Grove Vineyard is nestled in the beautiful New Jersey upland valleys. Located in the heart of the scenic Musconetcong River Valley and centered in the Warren Hills viticulture region. The hillside estate is primarily focused on Pinot Noir, Dijon Clone Chardonnay, and Riesling, with minor planting of Gewurztraminer, Cabernet Franc, Barbera, Chambourcin, Vidal Blanc, and Cayuga. The sites diversity of soils and slopes translates directly into the layers of complex flavors in our fruit. We craft our wines from the ground up; they are truly a unique expression of the land and the people who care for it. 
 <br /><br />
 We believe in the value of vineyard ownership as a means of producing wines of exceptional quality, distinctive character, and consistency year after year. The ability to make autonomous decisions about the vineyard provides the winemaking team with a great amount of control and flexibility while ensuring the high quality care of the vines. 
