--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,13 +91,19 @@
     		background: rgba(255, 255, 255, .5);
 		}
 		#content_wrapper {
-		width: 960px;
+		width: 100%;
+		margin-top: 50px;
 		min-height: 700px
 
 		}
 		#home_left {
 		width: 33%;
 		float: left;
+    	color: #fff;
+    	font: 400 1.95em/125% 'Arial, Helvetica, Sans-serif';
+    	text-shadow: 1px 1px 2px #000;
+    	text-align: center;
+    	padding: 0 5px 0 5px;
 
 		}
 
