--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -35,12 +35,11 @@
           </div>
         </div>
          <div class="item">
-          <img src="./images/slide4.png" alt="">
+          <img src="./images/slide4.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Shady Grove Wine Tastings!</h1>
+              <h1></h1>
               <p class="lead"></p>
-              <a class="btn btn-large btn-default" href="contact">Sign up today</a>
             </div>
           </div>
         </div>
