Filled contact content

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,5 +1,5 @@
 <div id="contact_wrap">
-
+	<div id="contact">Contact Us</div>
 	<form method="POST" action="/confirmation" id="contact_form">
 
 		<label for="username" class="contact_label contact">Name</label>
@@ -13,15 +13,15 @@
 		<textarea type="text" name="message" id="contact_text"></textarea>
 		<br/>
 
-		<input type="submit" value="Send E-Mail" id="sub_btn"/>
+		<input type="submit" value="Send E-Mail" class="btn btn-primary" id="sub_btn"/>
 
 	</form>
 
 	<div id="contact_filler">
 		<div class="contact_detail">Contact Details</div>
-		<div>Questions, comment or concern? Send us an E-Mail to get in touch with someone at Shady Grove Vineyards.</div>
+		<div class="contact_detail_text">Questions, comment or concern? Send us an E-Mail to get in touch with someone at Shady Grove Vineyards.</div>
 		<div class="contact_detail">Headquarters</div>
-		<div>Shady Grove Winery <br/>1 Shady Grove Road<br/>Shady Grove, California 94558</div>
+		<div class="contact_detail_text">Shady Grove Winery <br/>1 Shady Grove Road<br/>Shady Grove, California 94558</div>
 	</div>
 
 </div>
