--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,10 +140,19 @@
 	display: inline-block;
 	width: 45%;
 	margin-left: 20px;
-	height: 200px;
+	height: auto;
 	text-align: left;
 	border-left: solid 1px #444444;
 	padding-left: 20px;
+}
+
+#contact{
+	text-align: left;
+	font-weight: bold;
+	font-size: 20pt;
+	margin-left: 20px;
+	margin-bottom: 30px;
+	margin-top: 75px;
 }
 
 #contact_form{
@@ -170,4 +179,16 @@
 #sub_btn{
 	border-radius: 5px;
 	text-align: center;
+}
+
+.contact_detail{
+	margin-top: 35px;
+	margin-bottom: 15px;
+	font-size: 14pt;
+	font-weight: bold;
+}
+
+.contact_detail_text{
+	line-height: 1.5em;
+	font-size: 12pt;
 }
