--- a/views/contact.erb
+++ b/views/contact.erb
@@ -21,7 +21,8 @@
 		<div class="contact_detail">Contact Details</div>
 		<div class="contact_detail_text">Questions, comment or concern? Send us an E-Mail to get in touch with someone at Shady Grove Vineyards.</div>
 		<div class="contact_detail">Headquarters</div>
-		<div class="contact_detail_text">Shady Grove Winery <br/>1 Shady Grove Road<br/>Shady Grove, California 94558</div>
+		<div class="contact_detail_text" id ="contact_detail_btm">Shady Grove Winery <br/>1 Shady Grove Road<br/>Shady Grove, California 94558</div>
 	</div>
-
 </div>
+
+<div id="contact_map_canvas"></div>
