--- a/views/landing.erb
+++ b/views/landing.erb
@@ -1,5 +1,8 @@
 <div id="content_wrapper">
-
+<img src="./images/vineyard_banner.png" id="home_banner">
+<div id="home_bottom_content">
+testing 123
+</div>
 
 
 </div>
