--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,9 @@
    	<!-- Scripts -->
 	<script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+   <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGPfryzSHnbfbmnCSLrqN8u0MQqqWYIq8">
+    </script>
 
 </head>
 <body>
